name: quilt
version: 0.0.0.1
synopsis: See readme.md
description: See readme.md for description.
cabal-version: 2.0
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2017
license: BSD3
homepage: https://github.com/tonyday567/quilt#readme
bug-reports: https://github.com/tonyday567/quilt/issues
build-type: Simple
extra-source-files:
  readme.md
source-repository head
  type: git
  location: https://github.com/tonyday567/quilt

executable quilt
  main-is: quilt.hs
  hs-source-dirs: .
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , protolude >= 0.2.3
    , readme-lhs >= 0.4.0
    , numhask-prelude
    , numhask-space
    , numhask-array
    , streaming
    , box
    , web-rep
    , chart-svg
    , blaze-html
    , lucid
    , text
    , perf
    , perf-analysis
    , foldl
    , lens
    , online
    , time
    , online-csv

 default-language: Haskell2010
