cabal-version: 3.0
name: quilt
version: 0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2017
license: BSD-3-Clause
homepage: https://github.com/tonyday567/quilt#readme
bug-reports: https://github.com/tonyday567/quilt/issues
build-type: Simple
extra-source-files:
  readme.md
source-repository head
  type: git
  location: https://github.com/tonyday567/quilt

executable quilt
  main-is: quilt.hs
  hs-source-dirs: .
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , protolude >= 0.3 && < 0.4
    , readme-lhs >= 0.6 && < 0.7
    , numhask-prelude >= 0.5 && < 0.6
    , numhask-space >= 0.4 && < 0.5
    , numhask-array >= 0.6 && < 0.7
    , streaming
    , box >= 0.4 && < 0.5
    , web-rep >= 0.5 && < 0.6
    , chart-svg >= 0.0.3 && < 0.1
    , blaze-html
    , lucid
    , text
    , perf >= 0.6 && < 0.7
    , perf-analysis >= 0.3 && < 0.4
    , foldl
    , lens
    , online >= 0.5 && < 0.6
    , time
    , online-csv

 default-language: Haskell2010
