cabal-version: 2.4
name:          quilt
version:       0.1.0
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2017
license: BSD-3-Clause
homepage: https://github.com/tonyday567/quilt#readme
bug-reports: https://github.com/tonyday567/quilt/issues
build-type: Simple
extra-source-files:
  readme.md
source-repository head
  type: git
  location: https://github.com/tonyday567/quilt

executable quilt
  main-is: quilt.hs
  hs-source-dirs: .
  build-depends:
    base >= 4.7 && < 5,
    blaze-html,
    box >= 0.5,
    chart-svg >= 0.1,
    foldl,
    lens,
    lucid,
    numhask-array >= 0.7,
    numhask-prelude >= 0.6,
    numhask-space >= 0.5,
    online >= 0.6,
    box-csv,
    perf >= 0.7,
    readme-lhs >= 0.7,
    streaming,
    text,
    time,
    web-rep >= 0.6

  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
